@@ -23,6 +23,11 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2001-11-14  Cristy  <cristy@mystic.es.dupont.com>
+	* Changed a few pixel related defines (e.g. Downscale()) to
+	  a corresponding inline method to enforce strong type checking
+	  at compile time.
+
 2001-11-12  Cristy  <cristy@mystic.es.dupont.com>
 	* Previously ImageMagick did not write 8-bit ASCII PPM/PGM
 	  files when QuantumDepth == 16.
