@@ -169,7 +169,7 @@ Return any errors or warnings in this structure.
 <P></P></DL></DL>
 <P>
 <H2><A NAME="listcolorinfo">ListColorInfo</A></H2>
-<blockquote>ListColorInfo ( ) lists color names to the specified file. Color names are a convenience. Rather than defining a color by its red, green, andblue intensities just use a color name such as white, blue, or yellow.; </blockquote><P>The format of the ListColorInfo method is:</P>
+<blockquote>ListColorInfo ( ) lists color names to the specified file. Color namesare a convenience. Rather than defining a color by its red, green, andblue intensities just use a color name such as white, blue, or yellow.; </blockquote><P>The format of the ListColorInfo method is:</P>
 <blockquote>unsigned int ListColorInfo ( FILE *file, <A HREF="types/ExceptionInfo.html">ExceptionInfo</A> *exception ); </blockquote><P>
 <FONT SIZE=-1>A</FONT> description of each parameter follows.</P>
 <DL><DL>
