@@ -315,7 +315,7 @@ The file, typically stdout.
 <P></P></DL></DL>
 <P>
 <H2><A NAME="destroyimage">DestroyImage</A></H2>
-<blockquote>DestroyImage ( ) dereferences an image, deallocating memory associatedwith the image if the reference count becomes zero.; </blockquote><P>The format of the DestroyImage method is:</P>
+<blockquote>DestroyImage ( ) dereferences an image, deallocating memory associated withthe image if the reference count becomes zero.; </blockquote><P>The format of the DestroyImage method is:</P>
 <blockquote>void DestroyImage ( <A HREF="types/Image.html">Image</A> *image ); </blockquote><P>
 <FONT SIZE=-1>A</FONT> description of each parameter follows:</P>
 <DL><DL>
