@@ -1,3 +1,8 @@
+2001-11-14  Cristy  <cristy@mystic.es.dupont.com>
+	* Changed a few pixel related defines (e.g. Downscale()) to
+	  a corresponding inline method to enforce strong type checking
+	  at compile time.
+
 2001-11-12  Cristy  <cristy@mystic.es.dupont.com>
 	* Previously ImageMagick did not write 8-bit ASCII PPM/PGM
 	  files when QuantumDepth == 16.
